<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:padding="6dp"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        card_view:cardBackgroundColor="#FFFFFF"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="0dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"

            android:orientation="vertical">


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/grayColor"
                card_view:ignore="MissingConstraints" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                >


            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Honors and Awards"
                android:textColor="@color/blackColor"
                android:textSize="18sp"
                app:fontFamily="@font/roboto"
                card_view:ignore="MissingConstraints"
                card_view:layout_editor_absoluteX="0dp"
                card_view:layout_editor_absoluteY="9dp" />

                <TextView
                    android:id="@+id/deanslist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Dean's List -FAST (NUCES)"
                    android:textColor="@color/blackColor"
                    android:textSize="14sp"
                    android:layout_marginStart="10dp"
                    app:fontFamily="@font/roboto"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView9"
                    card_view:ignore="MissingConstraints" />
                <TextView
                    android:id="@+id/deanslist2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text=" Spring(2019) Semester"
                    android:textSize="14sp"
                    app:fontFamily="@font/roboto"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/deanslist"
                    card_view:ignore="MissingConstraints" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        card_view:cardBackgroundColor="#FFFFFF"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="0dp"

        >


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="294dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"

                    android:orientation="vertical">


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/grayColor"
                        card_view:ignore="MissingConstraints" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">


                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/projects_title"
                            android:textColor="@color/blackColor"
                            android:textSize="18sp"
                            app:fontFamily="@font/roboto"
                            card_view:ignore="MissingConstraints"
                            card_view:layout_editor_absoluteX="0dp"
                            card_view:layout_editor_absoluteY="9dp" />

                        <TextView
                            android:id="@+id/projectName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/project_title1"
                            android:textColor="@color/blackColor"
                            android:textSize="16sp"
                            app:fontFamily="@font/roboto"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView4"
                            card_view:ignore="MissingConstraints" />


                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/project_description"

                            android:textSize="14sp"
                            app:fontFamily="@font/roboto"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/projectName"
                            card_view:ignore="MissingConstraints" />



                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"

                        >

                        <TextView
                            android:id="@+id/projectName1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/project_title2"
                            android:textColor="@color/blackColor"
                            android:textSize="16sp"
                            app:fontFamily="@font/roboto"
                            app:layout_constraintStart_toStartOf="parent"
                            card_view:ignore="MissingConstraints" />

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/project_description1"
                            android:textSize="14sp"
                            app:fontFamily="@font/roboto"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/projectName1"
                            card_view:ignore="MissingConstraints" />



                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"

                        >

                        <TextView
                            android:id="@+id/projectName2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="Paint"
                            android:textColor="@color/blackColor"
                            android:textSize="16sp"
                            app:fontFamily="@font/roboto"
                            app:layout_constraintStart_toStartOf="parent"
                            card_view:ignore="MissingConstraints" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:text="\u2713 A complete new interface of the classice Paint application on Windows along with complete funtionality   "
                            android:textSize="14sp"
                            app:fontFamily="@font/roboto"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/projectName2"
                            card_view:ignore="MissingConstraints" />



                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


</LinearLayout>